--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Hello World</title>
-</head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="/css/index.css">
 
 <body>
-    <p>Hosting my own github page</p>
-</body>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
-</html>
+    <script src="/js/index.js"></script>
+</body>
