--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">
 <link rel="stylesheet" href="/css/index.css">
 
+
 <body>
+    <h1>Temperatures from 1900's to 2010</h1>
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <script src="/js/index.js"></script>
